// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test artwork mutations should create an artwork 1`] = `
Object {
  "data": Object {
    "addArtwork": Object {
      "creator": Object {
        "fullName": "user 1",
      },
      "description": "Art",
      "saleType": "auction",
      "title": "strstrstr",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test artwork mutations should delete an artork with an existing id 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Unauthorized],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test artwork mutations should fail to create an artwork because the user is not an approved creator 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Not approved or non-existing creator],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test artwork mutations should fail to create an artwork with fixed sale type and reserve price set 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Argument conflict. Fixed sale requires a price arg and no reservePrice arg],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test artwork mutations should try to delete an artork that doesn't exist 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Couldn't find an artowrk with id undefined],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test artwork mutations should try to delete an artwork that the user does not own and created 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Unauthorized],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test artwork mutations should try to delete an artwork that the user does not own and did not create 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Unauthorized],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
